Run tests on updated code